<resources>
    <string name="app_name">GoRunning</string>

    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="forgotPassword">Olvidaste tu contraseña?</string>
    <string name="login">Iniciar sesión</string>
    <string name="resetPassword">Enviar Contraseña</string>
    <string name="invitation">¿Cúal es tu linea de llegada hoy?</string>
    <string name="acept">He leído y acepto los</string>
    <string name="terms">términos y condiciones de uso.</string>

    <string name="empty_email">Introduce un email por favor</string>
    <string name="invalid_email">ups..!! parece que el email está mal escrito</string>

    <string name="google">GOOGLE</string>
    <string name="facebook">FACEBOOK</string>

    <string name="bar_title_terms">Términos y Condiciones de Uso</string>
    <string name="terms1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent rhoncus convallis metus at pretium. Vivamus at lacinia leo. Praesent velit elit, suscipit sit amet pulvinar id, imperdiet ac massa. Quisque molestie lectus rhoncus urna tempor, ut lacinia mi tempor. Praesent volutpat, ligula eget lobortis cursus, mauris libero consequat ligula, nec scelerisque erat ipsum tempor justo. Aliquam ornare faucibus augue vel faucibus. Ut sollicitudin commodo tortor eu faucibus. Vestibulum lacinia ligula sed tortor auctor, vitae sollicitudin lorem dapibus. Phasellus sed tincidunt odio.</string>
    <string name="terms2">Praesent arcu nisi, auctor quis tempor id, vehicula non nulla. Sed a fermentum tellus, quis pharetra lorem. Fusce vehicula libero in ultricies varius. Suspendisse vel velit tortor. Aliquam non nisi eget lectus tempor consectetur sed in magna. Nullam tincidunt, nibh ut sodales suscipit, ante est luctus purus, sed pellentesque ipsum massa et quam. Proin sed sapien ultrices ex aliquet elementum sed et erat. Sed tincidunt felis sapien, a suscipit massa cursus et. Phasellus auctor tellus ac neque maximus accumsan. Morbi sit amet odio nec sapien pharetra elementum maximus id odio. Integer laoreet, neque id efficitur auctor, magna massa consequat justo, quis vehicula ipsum massa at sem. Morbi in ornare sapien, in luctus mauris. </string>
    <string name="terms3">Sed id libero auctor, lacinia lectus a, consequat nisl. Nam quis suscipit purus. Fusce at congue quam. Etiam congue imperdiet bibendum. Etiam at porttitor ipsum. Donec consectetur sapien in neque tempus tempus. Sed vulputate rutrum ultrices. Praesent in est leo. Suspendisse euismod purus id urna tempus pellentesque. Praesent condimentum nisl sit amet purus pulvinar sagittis. Cras purus felis, hendrerit et ornare ut, molestie id orci. Integer dictum consequat leo, id pretium urna tempus et. Donec nibh ante, laoreet id lorem vitae, vestibulum sollicitudin lorem. </string>

    <string name="facebook_app_id">795872141658793</string>
    <string name="fb_login_protocol_scheme">fb795872141658793</string>
    <string name="facebook_client_token">8b7a3fd37b55eb193e86218e692583c6</string>

    <string name="log_in_dialog">Inicio de Sesión</string>
    <string name="accept_and_retry">Aceptar términos y reintentar</string>
    <string name="ok">OK</string>

    <string name="bar_title">Go Running</string>
    <string name="menu_running">Go Running</string>
    <string name="menu_record">Historial</string>
    <string name="menu_becamepremium">Descubre Premium</string>
    <string name="menu_clearpreferences">Reestablecer Ajustes</string>
    <string name="menu_signout">Cerrar Sesión</string>
    <string name="menu_offercourse">¿Quieres conocer técnicas para hacer ejercicios? Entra aquí</string>

    <string name="level">Nivel</string>
    <string name="nav_hi">El mayor placer en la vida es hacer lo que la gente dice que no eres capas de hacer</string>
    <string name="user">blabla@gorunning.com</string>


    <string name="navigation_drawer_open">Menu</string>
    <string name="navigation_drawer_close">Close</string>

    <string name="bar_title_record">Historial</string>

    <string name="orderby_dateZA">Fecha (Recientes primero)</string>
    <string name="orderby_durationZA">Duración (Mayores primero)</string>
    <string name="orderby_distanceZA">Distancia (Mayores primero)</string>
    <string name="orderby_avgspeedZA">Vel. Prom. (Mayores primero)</string>
    <string name="orderby_maxspeedZA">Vel. Máx. (Mayores primero)</string>

    <string name="orderby_dateAZ">Fecha (Antiguos primero)</string>
    <string name="orderby_durationAZ">Duración (Menores primero)</string>
    <string name="orderby_distanceAZ">Distancia (Menores primero)</string>
    <string name="orderby_avgspeedAZ">Vel. Prom. (Menores primero)</string>
    <string name="orderby_maxspeedAZ">Vel. Máx. (Menores primero)</string>

    <string name="anuncio">Aprende</string>
    <string name="cuenta">Cuenta</string>

    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="finish">Finalizar</string>
    <string name="rounds">Round 1</string>
    <string name="time_running">Running Time</string>
    <string name="time_walking">Walking Time</string>
    <string name="walking_clock">00:00</string>
    <string name="init_stop_watch_value">00:00:00</string>

    <string name="hard_volumen">Volumen de Música Running</string>
    <string name="soft_volumen">Volumen de Música Walking</string>
    <string name="notification_volumen">Volumen de Notificaciones</string>
    <string name="hard_position">00:00:00</string>
    <string name="hard_duration">01:00:00</string>
    <string name="soft_position">00:00:00</string>
    <string name="soft_duration">01:00:00</string>

    <string name="PopUpTotalRuns">Carrera: </string>
    <string name="PopUpTotalDistance">Kms acumulados: </string>
    <string name="PopUpTotalTime">Total time: </string>
    <string name="NoDataWarning">No se registraron datos. Recuerda activar el GPS si deseas información de tu carrera</string>

    <string name="PopUpDurationTitle">DURACION</string>
    <string name="PopUpChallengeTitle">OBJETIVO</string>
    <string name="PopUpIntervalTitle">INTERVALOS</string>
    <string name="PopUpDistanceTitle">DISTANCIA</string>
    <string name="PopUpAvgSpeedTitle">VELOCIDAD PROMEDIO</string>
    <string name="PopUpMaxSpeedTitle">VELOCIDAD MÁXIMA</string>
    <string name="PopUpUnevennessTitle">DESNIVEL</string>

    <string name="textNull"></string>
    <string name="textNoData">-</string>

    <string name="medalDistanceDescription">Distancia [Record Personal]</string>
    <string name="medalAvgSpeedDescription">Vel. Máx. [Record Personal]</string>
    <string name="medalMaxSpeedDescription">Vel. Prom. [Record Personal]</string>
    <string name="log_out_dialog">Cerrar sesión</string>
    <string name="accept_log_out">Seguro quieres cerrar sesión ?</string>
    <string name="no">No</string>
    <string name="yes">Si</string>

    <string name="alertActivationGPSTitle">Permitir acceso a ubicación</string>
    <string name="alertActivationGPSDescription">Si desea obtener datos de su carrera como la distancia recorrida y la velocidad debe activar el GPS</string>
    <string name="ignoreActivationGPS">Ignorar</string>
    <string name="aceptActivationGPS">Activar</string>

    <string name="alertClearPreferencesTitle">¿Quieres borrar tus preferencias de carrera?</string>
    <string name="alertClearPreferencesDescription">Borraremos los ajustes de volumen y carrera (modo y tiempo de intervalos) de tu útlima carrera.</string>

    <string name="alertSignOutTitle">¿Deseas cerrar sesión?</string>
    <string name="alertSignOutTDescription">Puedes volver cuando quieras :)</string>
    <string name="delete_dialog">Borrar registro</string>
    <string name="accept_delete">¿ Estás seguro de eliminar este registro ?</string>
    <string name="channel_name">Notificaciones de medallas</string>
    <string name="channel_description">Medallas ganadas por categorias</string>

    <string name="CardAvgSpeedTitle">VEL. PROM.</string>
    <string name="CardMaxSpeedTitle">VEL. MAX</string>
    <string name="CardMedalDistance">Kms. [RP]</string>
    <string name="CardMedalAvgSpeed">V.Máx. [RP]</string>
    <string name="CardMedalMaxSpeed">V.Pr. [RP]</string>

    <string name="share">COMPARTIR</string>
    <string name="log_in_face_or_google">Ingresa con:</string>

</resources>