<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TermsActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/toolbar_terms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Términos y Condiciones de Uso"
        android:padding="20dp"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@color/black"/>

    <TextView
        android:id="@+id/tvTerms1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/terms1"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:layout_margin="8dp"/>

    <TextView
        android:id="@+id/tvTerms2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/terms2"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:layout_margin="8dp"/>

    <TextView
        android:id="@+id/tvTerms3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/terms3"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:layout_margin="8dp"/>
</LinearLayout>